manifests/apps/homeassistant/music-ingress-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-music
  namespace: home-assistant
spec:
  type: ExternalName
  externalName: 192.168.12.250
  ports:
    - name: http
      port: 8095
      targetPort: 8095
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-music
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`music.buergerhoff.com`)
      kind: Rule
      services:
        - name: home-assistant-music
          port: 8095
  tls:
    certResolver: main
